--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="jane-style">
                 <h3>Hello World!</h3>
             </div>
-           <div class ="my-style"></div>
+           <div class ="Kyles-style"></div>
            <h3>Kyle DAmato loves <em>motorcycles</em> in the summer</h3> 
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
