--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <h3>Hello World!</h3>
             </div>
            <div class ="Kyles-style"></div>
-           <h3>Kyle DAmato loves <em>motorcycles</em> in the summer</h3> 
+                <h3>Kyle DAmato loves <em>motorcycles</em> in the summer</h3>
+            </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
